--- a/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name="tda2.insa.com.be_covoiturage.MyApplication"
+    <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -17,11 +18,20 @@
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <action android:name="com.insa.tda2.LoginActivity"/>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.insa.tda2.Settings" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".EditSetting"
+            android:label="@string/title_activity_edit_setting" >
         </activity>
     </application>
 
