--- a/trunk/Client/BE_Covoiturage/volley/build.gradle
+++ b/trunk/Client/BE_Covoiturage/volley/build.gradle
@@ -5,7 +5,6 @@
 // Any other changes to the build config belong in rules.gradle, which
 // is used by projects that depend on Volley but define their own
 // tools versions across all dependencies to ensure a consistent build.
-
 buildscript {
     repositories {
         mavenCentral()
@@ -14,12 +13,12 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.0.+'
     }
 }
-
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 19
     buildToolsVersion = '21.1.2'
 }
-
 apply from: 'rules.gradle'
+
+dependencies {
+}
