--- a/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
+++ b/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
@@ -18,10 +18,6 @@
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible" >
-        </activity>
-        <activity
-            android:name=".Settings"
-            android:label="@string/title_activity_settings" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="com.insa.tda2.Settings" />
@@ -30,8 +26,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
             android:name=".EditSetting"
             android:label="@string/title_activity_edit_setting" >
+        </activity>
+        <activity
+            android:name=".CreateAccountActivity"
+            android:label="@string/title_activity_create_account" >
         </activity>
     </application>
 
