--- a/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +38,10 @@
             android:name=".CreateAccountActivity"
             android:label="@string/title_activity_create_account" >
         </activity>
+        <activity
+            android:name=".ProfileViewActivity"
+            android:label="@string/title_activity_profile_view">
+         </activity>
     </application>
 
 </manifest>
