--- a/Server/nbproject/private/private.properties
+++ b/Server/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=/Users/remi/Library/Application Support/NetBeans/8.0.2/tomcat80.properties
-j2ee.server.home=/Users/remi/Documents/Programmation/Android/BE_Covoit/Server/apache-tomcat-8.0.15
-j2ee.server.instance=tomcat80:home=/Users/remi/Documents/Programmation/Android/BE_Covoit/Server/apache-tomcat-8.0.15
-user.properties.file=/Users/remi/Library/Application Support/NetBeans/8.0.2/build.properties
+deploy.ant.properties.file=C:\\Users\\Kapouter\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/Kapouter/AppData/Roaming/NetBeans/8.0.2/apache-tomcat-8.0.15.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.15
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.15:base=apache-tomcat-8.0.15.0_base
+user.properties.file=C:\\Users\\Kapouter\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
