admin: ajout de servlets, de pages jsp: connexion et deconnexion possibles, generer les rapports en cours

--- a/Server/web/WEB-INF/web.xml
+++ b/Server/web/WEB-INF/web.xml
@@ -1,22 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app>
   
-  <servlet>
-    <servlet-name>AndroidCtrl</servlet-name>
-    <servlet-class>covoit.android.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AndroidCtrl</servlet-name>
-    <url-pattern>/android/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>AndroidCtrl</servlet-name>
+        <servlet-class>covoit.android.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>LoginServlet</display-name>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>covoit.admin.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>LogoutServlet</display-name>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>covoit.admin.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <description>
+        </description>
+        <display-name>GenerateReports</display-name>
+        <servlet-name>GenerateReports</servlet-name>
+        <servlet-class>covoit.admin.GenerateReports</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AndroidCtrl</servlet-name>
+        <url-pattern>/android/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GenerateReports</servlet-name>
+        <url-pattern>/GenerateReports</url-pattern>
+    </servlet-mapping>
   
-  <servlet>
-    <servlet-name>AdminCtrl</servlet-name>
-    <servlet-class>covoit.admin.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AdminCtrl</servlet-name>
-    <url-pattern>/admin/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>AdminCtrl</servlet-name>
+        <servlet-class>covoit.admin.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminCtrl</servlet-name>
+        <url-pattern>/admin/*</url-pattern>
+    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>FormConnexion.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
