--- a/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:required="true" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -30,7 +30,7 @@
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".app.LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
@@ -41,11 +41,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CreateAccountActivity"
+            android:name=".app.CreateAccountActivity"
             android:label="@string/title_activity_create_account" >
         </activity>
         <activity
-            android:name=".ProfileViewActivity"
+            android:name=".app.profile.ProfileViewActivity"
             android:label="@string/title_activity_profile_view">
          </activity>
     </application>
