--- a/trunk/Server/nbproject/project.properties
+++ b/trunk/Server/nbproject/project.properties
@@ -27,6 +27,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.javax.json.jar=lib/javax.json.jar
+file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.Server-src=src
 file.reference.Server-test=test
 includes=**
@@ -39,7 +40,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.javax.json.jar}
+    ${file.reference.javax.json.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +70,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
